[package]
name = "wasm-pong"
version = "0.1.1"
edition = "2021"

[unstable]
features = ["edition2024"]

[profile.release]
opt-level = 0  # Disable optimizations as workaround

[dependencies]
macroquad = "0.4.13"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen = "0.2.100"
